# libcmbrcc

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  NOTICE.html  README.md  about.hbs  about.toml  deny.toml  license.html
.github/workflows/: rust.yml
clap-dynamic/: Cargo.toml
data/: download_data.sh  fischer_spassky_1992.pgn  promotion.pgn  simple.pgn  with_varation_and_comments.pgn
docs/: CMBR.md  CMBR.tex
libcmbr/: Cargo.toml
libcmbr/src/: error.rs  lib.rs  utils.rs
libcmbr/src/cmbr/: error.rs  flags.rs  mod.rs  pgntocmbr.rs  santocmbrmv.rs  structs.rs  tests.rs  u24_impl.rs
libcmbr/src/pgn/: ast.rs  mod.rs  tests.rs
libcmbr/src/position/: mod.rs
scripts/: checkunsafe.py
src/: eval_args.rs  main.rs  pgn.rs  tests.rs  tree.rs  utils.rs
src/cmbr/: mod.rs  u24_impl.rs
src/pgn/: ast.rs  define_structs.rs  errors.rs  headers.rs  mod.rs  tokens.rs  tree.rs
test/pgn/: headers.rs  mod.rs
tests/pgn/: ast.rs  lex.rs
