[package]
name = "cmbrcc"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0"

[workspace]

[dependencies]
lexopt = "0.3.0"
memmap2 = "0.9.4"
libcmbr = { path = "./libcmbr" }

[features]
safe_u24 = []
benchmark = []

[profile.release]
lto = "fat"
incremental = false
codegen-units = 1

[profile.dev]
opt-level = 1
lto = "thin"
incremental = false
codegen-units = 2048
split-debuginfo = "unpacked"

[profile.profile]
inherits = "release"
strip = false
debug = true

[profile.size]
inherits = "release"
opt-level = "s"

[profile.size_extreme]
inherits = "release"
opt-level = "z"

[profile.test]
codegen-units = 2048
incremental = false
lto = true
opt-level = 3

[dev-dependencies]
project-root = "0.2.2"
