[package]
name = "cmbrcc"
version = "0.1.0-alpha"
edition = "2021"
license = "GPL-3.0"

[workspace]

[dependencies]
lexopt = "0.3.0"
memmap2 = "0.9.4"
libcmbr = { path = "./libcmbr" }
cfg-if = "1.0.0"
bitcode = { version = "0.6.0", features = ["serde"], optional = true }

[features]
default = ["bitcode"]
bitcode = ["dep:bitcode"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.58.0"

[profile.release]
lto = "fat"
incremental = false
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
lto = "thin"
incremental = false
codegen-units = 2048
split-debuginfo = "unpacked"

[profile.profile]
inherits = "release"
strip = false
debug = true

[profile.size]
inherits = "release"
opt-level = "s"

[profile.size_extreme]
inherits = "release"
opt-level = "z"

[profile.test]
codegen-units = 2048
incremental = false
lto = true
opt-level = 3

[dev-dependencies]
project-root = "0.2.2"
