[package]
name = "libcmbr"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
litemap = "0.7.3"
memmap2 = "0.9.4"
pgn-lexer = { git = "https://github.com/datawater/pgn-lexer" }
shakmaty = "0.27.0"

[features]
default = []
safe_u24 = []
benchmark = []
tcmalloc = ["dep:tcmalloc"]

[dev-dependencies]
project-root = "0.2.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tcmalloc = { version = "0.3.0", optional = true }
