[package]
name = "libcmbr"
version = "0.0.1-alpha"
edition = "2021"
license = "GPL-3.0"

[dependencies]
bitcode = { version = "0.6.0", features = ["derive", "serde"], default-features = false, optional = true }
cfg-if = "1.0.0"
litemap = { version = "0.7.3", features = ["serde"] }
memmap2 = "0.9.4"
pgn-lexer = { git = "https://github.com/datawater/pgn-lexer" }
phf = { version = "0.11.2", features = ["macros"] }
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"], optional = true }
shakmaty = "0.27.0"

[features]
default = ["bitcode"]
safe_u24 = []
benchmark = []
tcmalloc = ["dep:tcmalloc"]
bitcode = ["dep:bitcode", "dep:serde"]
serde = []

[dev-dependencies]
project-root = "0.2.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tcmalloc = { version = "0.3.0", optional = true }
