[package]
name = "libcmbr"
version = "0.0.1-alpha"
edition = "2021"
license = "GPL-3.0"

[dependencies]
cfg-if = "1.0.0"
memmap2 = "0.9.4"
shakmaty = "0.27.0"
pgn-lexer = { git = "https://github.com/datawater/pgn-lexer" }
litemap = { version = "0.7.3", features = ["serde"] }
phf = { version = "0.11.2", features = ["macros"] }

[features]
default = [ "jemalloc" ]
jemalloc = ["dep:tikv-jemallocator"]
safe_u24 = []
benchmark = []
serde = []

[dev-dependencies]
project-root = "0.2.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = ["background_threads", "unprefixed_malloc_on_supported_platforms"], optional = true}
